Memperbaiki bug overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
     scroll-behavior: smooth;
+}
+body{
+    overflow-x: hidden;
 }
